--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,45 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".mainModule.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/id_nombreTank"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/tittle_tank"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTanks"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/id_nombreTank"
+        tools:listitem="@layout/item_tank"
+        />
+
+    <TextView
+        android:id="@+id/id_nombreZone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/titles_zone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rvTanks"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvZones"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/id_nombreZone"
+        tools:listitem="@layout/item_zone"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
