--- a/app/src/main/res/layout/item_zone.xml
+++ b/app/src/main/res/layout/item_zone.xml
@@ -4,23 +4,32 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:backgroundTint="@color/negro_carbon"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="8dp"
+    app:strokeColor="@color/marron_tierra"
+    app:strokeWidth="2dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/common_padding_default"
-        >
+        android:layout_margin="@dimen/common_padding_default">
 
-    <TextView
-        android:id="@+id/zona_nombre"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        tools:text="Nombre Zona"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        <TextView
+            android:id="@+id/zona_nombre"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/naranja_advertencia"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:letterSpacing="0.05"
+            tools:text="Nombre Zona"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:padding="8dp"
+            android:gravity="center"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
